# ChangeLog for dev-python/lockfile
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/lockfile/ChangeLog,v 1.4 2010/06/24 21:56:08 pacho Exp $

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> lockfile-0.9.ebuild:
  stable amd64, bug 323693

*lockfile-0.9 (10 May 2010)

  10 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +lockfile-0.9.ebuild:
  Version bump.

  12 Jan 2010; Christian Faulhammer <fauli@gentoo.org> lockfile-0.8.ebuild:
  add ~x86, bug 297725

*lockfile-0.8 (21 Dec 2009)

  21 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +lockfile-0.8.ebuild, +metadata.xml:
  Initial addition (bug #289495).
