@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/minimock/Attic/minimock-1.2.5.ebuild,v 1.2 2010/06/24 21:55:19 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/minimock/Attic/minimock-1.2.5.ebuild,v 1.3 2010/06/28 08:44:35 phajdan.jr Exp $
 
 EAPI="2"
 SUPPORT_PYTHON_ABIS="1"
@@ -16,7 +16,7 @@ SRC_URI="http://pypi.python.org/packages/source/M/${MY_PN}/${MY_P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="dev-python/setuptools"
