@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/minimock
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/minimock/ChangeLog,v 1.2 2010/06/24 21:55:19 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/minimock/ChangeLog,v 1.3 2010/06/28 08:44:35 phajdan.jr Exp $
+
+  28 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  minimock-1.2.5.ebuild:
+  x86 stable wrt bug #323693
 
   24 Jun 2010; Pacho Ramos <pacho@gentoo.org> minimock-1.2.5.ebuild:
   stable amd64, bug 323693
