@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/lockfile
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/lockfile/ChangeLog,v 1.4 2010/06/24 21:56:08 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/lockfile/ChangeLog,v 1.5 2010/06/28 08:45:42 phajdan.jr Exp $
+
+  28 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> lockfile-0.9.ebuild:
+  x86 stable wrt bug #323693
 
   24 Jun 2010; Pacho Ramos <pacho@gentoo.org> lockfile-0.9.ebuild:
   stable amd64, bug 323693
